<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/edittext_background"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_dialogBoxTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/iv_status"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="@dimen/_10dp"
        android:padding="@dimen/_5dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_check_circle_done" />

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10dp"
        android:padding="@dimen/_5dp"
        android:text="@string/saved_sucessfully"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sp"
        android:textStyle="bold" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_dismis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10dp"
        android:background="@drawable/save_btn_background"
        android:text="@string/ok"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sp"
        android:textStyle="bold" />


</LinearLayout>