<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".AddNoteActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_20dp"
            app:cardElevation="@dimen/_10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corner_rectangle_background"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/_8dp">

                <TextView
                    android:id="@+id/tv_addNoteTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/edittext_background"
                    android:padding="@dimen/_10dp"
                    android:text="@string/_12_12_1999"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sp" />

                <EditText
                    android:id="@+id/tv_addNoteTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10dp"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/title"
                    android:maxLength="50"
                    android:padding="@dimen/_5dp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/_20sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:layout_marginBottom="@dimen/_10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_20dp"
            app:cardElevation="@dimen/_10dp"
            app:layout_constraintBottom_toTopOf="@id/btn_saveNote"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/round_corner_rectangle_background">

                <EditText
                    android:id="@+id/tv_addNoteBody"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/edittext_background"
                    android:hint="Enter note here"
                    android:padding="@dimen/_10dp"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_saveNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:layout_marginBottom="@dimen/_20dp"
            android:background="@drawable/save_btn_background"
            android:text="@string/save"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>